package com.narxoz.rpg.equipment;

public interface Armor {
    String getArmorInfo();
    int getDefense();
}
