package com.narxoz.rpg.equipment;

public interface Weapon {
    String getWeaponInfo();
    int getDamage();
}
